--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "build:watch": "run-p build:watch:*",
     "build:watch:tsc": "tsc -w",
     "build:watch:rollup": "rollup -c -w",
+    "examples": "cd ./examples && tsc",
     "fix": "tslint --fix 'src/**/*.ts' 'test/**/*.ts' 'test/**/*.tsx'",
     "lint": "tslint 'src/**/*.ts' 'test/**/*.ts' 'src/**/*.tsx' 'test/**/*.tsx'",
     "pretest": "npm run clean && npm run build",
@@ -74,7 +75,7 @@
   "dependencies": {
     "@types/d3-selection": "^1.1.0",
     "@types/d3-transition": "^1.1.1",
-    "d3-selection": "^1.1.0",
+    "d3-selection": "^1.3.0",
     "d3-transition": "^1.1.0",
     "global": "^4.3.2",
     "tslint-config-airbnb": "^5.8.0"
